feat: implement images replication
