# src/replication/core/controller.go
@@ -27,13 +27,14 @@ import (
 	"github.com/vmware/harbor/src/replication/target"
 	"github.com/vmware/harbor/src/replication/trigger"
 	"github.com/vmware/harbor/src/ui/utils"
+	"reflect"
 )
 
 // Controller defines the methods that a replicatoin controllter should implement
 type Controller interface {
 	policy.Manager
 	Init() error
-	Replicate(policyID int64, metadata ...map[string]interface{}) error
+	Replicate(policyID int64, isIndependent bool, metadata ...map[string]interface{}) error
 }
 
 //DefaultController is core module to cordinate and control the overall workflow of the
@@ -194,18 +195,39 @@ func (ctl *DefaultController) GetPolicies(query models.QueryParameter) (*models.
 	return ctl.policyManager.GetPolicies(query)
 }
 
-//Replicate starts one replication defined in the specified policy;
-//Can be launched by the API layer and related triggers.
-func (ctl *DefaultController) Replicate(policyID int64, metadata ...map[string]interface{}) error {
-	policy, err := ctl.GetPolicy(policyID)
-	if err != nil {
-		return err
-	}
-	if policy.ID == 0 {
-		return fmt.Errorf("policy %d not found", policyID)
+// Replicate starts one replication defined in the specified policy;
+// Can be launched by the API layer and related triggers.
+func (ctl *DefaultController) Replicate(policyID int64, isIndependent bool, metadata ...map[string]interface{}) error {
+	var replication *replicator.Replication
+	var err error
+	if isIndependent {
+		replication, err = ctl.getIndependentReplication(metadata...)
+		if err != nil {
+			log.Errorf("get independent replication error: %v", err)
+			return err
+		}
+	} else {
+		replication, err = ctl.getReplication(policyID, metadata...)
+		if err != nil {
+			log.Errorf("get replication error: %v", err)
+			return err
+		}
 	}
 
-	// prepare candidates for replication
+	return ctl.replicator.Replicate(replication)
+}
+
+// getReplication gathers replication information for replicator.
+func (ctl *DefaultController) getReplication(policyID int64, metadata ...map[string]interface{}) (*replicator.Replication, error) {
+	policy, err := ctl.GetPolicy(policyID)
+	if err != nil {
+		return nil, err
+	}
+	if policy.ID == 0 {
+		return nil, fmt.Errorf("policy %d not found", policyID)
+	}
+
+	// Prepare candidates for replication
 	candidates := getCandidates(&policy, ctl.sourcer, metadata...)
 	if len(candidates) == 0 {
 		log.Debugf("replication candidates are null, no further action needed")
@@ -215,17 +237,64 @@ func (ctl *DefaultController) Replicate(policyID int64, metadata ...map[string]i
 	for _, targetID := range policy.TargetIDs {
 		target, err := ctl.targetManager.GetTarget(targetID)
 		if err != nil {
-			return err
+			return nil, err
 		}
 		targets = append(targets, target)
 	}
 
-	// submit the replication
-	return ctl.replicator.Replicate(&replicator.Replication{
+	return &replicator.Replication{
 		PolicyID:   policyID,
 		Candidates: candidates,
 		Targets:    targets,
-	})
+	}, nil
+}
+
+// getIndependentReplication gathers replication information for replicator, it's independent replication, without replication policy
+func (ctl *DefaultController) getIndependentReplication(metadata ...map[string]interface{}) (*replicator.Replication, error) {
+	if len(metadata) == 0 {
+		return nil, fmt.Errorf("no metadata provided")
+	}
+
+	candidates := []models.FilterItem{}
+	meta, ok := metadata[0]["candidates"]
+	if !ok {
+		return nil, fmt.Errorf("no candidates provided in metadata")
+	}
+	if cands, ok := meta.([]models.FilterItem); ok {
+		candidates = append(candidates, cands...)
+	} else {
+		return nil, fmt.Errorf("candiates should be type of '[]models.FilterItem'")
+	}
+
+	targetNames, ok := metadata[0]["targets"].([]string)
+	if !ok {
+		return nil, fmt.Errorf("no targets provided in metadata")
+	}
+
+	targets := []*common_models.RepTarget{}
+	for _, n := range targetNames {
+		target, err := ctl.targetManager.GetTarget(n)
+		if err != nil {
+			return nil, err
+		}
+		targets = append(targets, target)
+	}
+
+	opUUID, ok := metadata[0]["uuid"]
+	if !ok {
+		return nil, fmt.Errorf("no operation 'uuid' provided in metadata")
+	}
+	uuid, ok := opUUID.(string)
+	if !ok {
+		return nil, fmt.Errorf("operation uuid should have type 'string', but got '%s'", reflect.TypeOf(opUUID).Name())
+	}
+
+	return &replicator.Replication{
+		PolicyID:   -1,
+		OpUUID: uuid,
+		Candidates: candidates,
+		Targets:    targets,
+	}, nil
 }
 
 func getCandidates(policy *models.ReplicationPolicy, sourcer *source.Sourcer,
